# finetune_embedding

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
dataset_collection/: README.md
dataset_collection/data/: all_es_data.csv  eval_results.csv  evaluation_data.json  raw_es_results.csv
dataset_collection/scripts/: es_gather_all.py  es_to_csv.py
dataset_collection/utils/: __init__.py  globals.py
evaluation/: check_evaluation_data.py  compare_two_models.py
fine_tune/: using_sentence_transformers.py
