[project]
name = "finetune-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.1.1",
    "dotenv>=0.9.9",
    "elasticsearch==8.*",
    "sentence-transformers>=5.1.1",
    "transformers[torch]>=4.56.2",
]
